tests/bytes-param/invalid-type.stderr
error: encountered invalid value argument for #[bitfield] `bytes` parameter
 --> $DIR/invalid-type.rs:4:20
  |
4 | #[bitfield(bytes = true)]
  |                    ^^^^
